# chat.llm

./: CMakeLists.txt  LICENSE  README.md  tools
config/: config.json
models/: README
prompts/: mealplanner.txt  podcast.txt  summarize.txt  translate.txt  tripadvisor.txt
src/: CMakeLists.txt  llm.cpp  llm.h  main.cpp  message.h  server.cpp  server.h  tools.cpp  tools.h
tools/: README.md
